# ToDo

./: .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 360e7540d8fb_initial_migration.py  ce2650f10f0e_initial_migration.py  efc7c44849cf_tipos_das_datas_alterado_str_datetime.py
src/todo/: cli.py  model_task.py  repo_task.py
src/todo/core/: base.py  config.py  logger.py  session.py  settings.py
src/todo/models/: task.py
src/todo/repo/: task  task.py
src/todo/service/: task.py
tests/: test_get_session.py
