[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Lucas Beneylton 47756391+lbeneylton@users.noreply.github.com"]
packages = [
    { include = "todo", from = "src" }
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.18.4"
pytest = "^9.0.3"
typer = {extras = ["all"], version = "^0.25.1"}
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Entry Point
[tool.poetry.scripts]
todo = "todo.cli:cli"